# autonovel

./: .env.example  .gitignore  MIGRATION_MAP.md  PIPELINE.md  README.md  WORKFLOW.md  adversarial_edit.py  build_arc_summary.py  build_outline.py  compare_chapters.py  draft_chapter.py  evaluate.py  gen_art.py  gen_art_directions.py  gen_audiobook_script.py  gen_canon.py  gen_characters.py  gen_cover_composite.py  gen_cover_print.py  gen_outline.py  gen_outline_part2.py  gen_revision.py  gen_world.py  pyproject.toml  reader_panel.py  review.py  run_pipeline.py  seed.py
autonovel/: __init__.py  cli.py  llm.py  pdf_export.py  pipeline.py  server.py
landing/: index.html
typeset/: build_tex.py  novel.tex
web/: index.html
web/assets/: app.js
